2007-10-01 Alexander Malysh <amalysh at kannel.org>
   * test/decode_emimsg.c: new version
     - Fixes a segfault when we are decoding 52 operation response (eg 
       ./decode_emimsg 03/00020/R/52/A///98)
     - Operation 31 Ack/Nack is now supported
     - Operation 5x Ack/Nack is now supported
     - Fixes segfault when decoding 52 when xMSG is NULL
     Thanks to Vincent CHAVANIS <vincent at telemaque.fr> for the patch.
     [Msg-Id: <0d3f01c801bd$07a8f860$9600a8c0@vince>

2007-09-27 Alexander Malysh <amalysh at kannel.org>
   * gw/dlr.c: changed info to debug for the info that we still waiting for
     dlr. Thanks to Vincent CHAVANIS for patch.

2007-09-03  Stipe Tolj  <stolj at kannel.org>
   * gwlbib/cfg.c: fixing memleak reported by valgrind when we use directory
     inclusions.

2007-08-29  Stipe Tolj  <stolj at kannel.org>
   * gwlib/cfg.c: remove empty lines. NLC.
   * gwlib/http.c: add 'Date' HTTP header to any HTTP response we pass out.
   
2007-08-25  Stipe Tolj  <stolj at kannel.org>
   * gwlib/gwthread-pthread.c: fix valgrind conditional jump error report
     in gwthread_pool() for .revents value.

2007-08-03 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smpp_pdu.c: whitespaces fixes and various PDU parsing fixes and
     enhancements. This should not break anything.

2007-08-03 Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/smsbox.c: fixed userguide for XML post.
     Also fixed XML Post parsing of smsc-id to match userguide. It's possible
     that this will break existing applications.

2007-07-22 Alexander Malysh <amalysh at kannel.org>
   * gw/ota_compiler.c: added new WLAN-related tokens in order to get new
     Nokia WiFi/VoIP OTA provisioning working. See OMA-DM-CP-2005-001R02-CR_CP-WLAN-.doc.
     This fixed #406.
     Thanks to sobomax for patch.

2007-07-22 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_at.c: added CLOCAL to c_cflag. This fixed #404.